h1 spacing fix

--- a/scss/demo.scss
+++ b/scss/demo.scss
@@ -43,6 +43,7 @@ a {
 	h1 {
 		letter-spacing: -.03em;
 		color: #444;
+		margin: 20px 0 10px 0;
 		@include transition-all(0.2);
 
 
